--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "test": "turbo run test",
     "version": "lerna version --force-publish -y --no-push --no-changelog --no-git-tag-version $npm_package_version",
     "version:auto": "yarn version --no-git-tag-version --new-version $1",
-    "changelog": "node scripts/create-changelog"
+    "changelog": "node scripts/create-changelog",
+    "prepare": "npm run build"
   },
   "devDependencies": {
     "@turbo/gen": "^2.3.3",
